[project]
name = "redmine_intg"
authors = [
    { name = "Promantia Business Solutions", email = "hari.madhavan@promantia.com"}
]
description = "Front End App that provides access to Redmine tables and actions"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    python-redmine~=2.5.0
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
